--- a/Инструкция.md
+++ b/Инструкция.md
@@ -5,10 +5,12 @@
 
 ## Первым шагом будет инциализация программы в рабочую папку. 
 * *Для этого используется команда:*
+
 > **git init**
 
 ## Для последующей корректной работы с гитом необходимо указать имя пользоваетля и электронную почту аккаунта github для работы с удаленными репозиториями.
 * *Для этого используются следующие команды:*
+
 > **git config --global "user.name"**.
 
 > **git config --global user@email.com**
@@ -16,6 +18,7 @@
 ## Работа программы производится с помощью учёта отслеживаемых файлов и фиксации их измениения.
 
 * *Что бы добавить файл в отслеживаемые используется команда:*
+
 > **git add**
 
 * *Также есть возможность добавить все файлы которые находятся в рабочей папке, для этого используется команда:*
@@ -24,10 +27,14 @@
 
 * *Для фиксации измений в файле используется команда:*
 
-> **git commit -m "Коментарий к изменению"**
+> **git commit -m "Комментарий к изменению"**
 
 *Важный нюанс при работе с программой заключается в том, что при любом измении файла в котором идет работа необходимо сообщать об этом программе по средствам команды git add. В случае если этот шаг пропустить изменение в git зафиксировать неудастся.*
+* Для оценки текущего сосотояния работы программы используется команда:
+> git status
 
-## Git ведет журнал зафиксированных пользователем изменений с выводом коментария к ним и возможностью вернуть файл в состояние того или иного уровня изменений.
+## Git ведет журнал зафиксированных пользователем изменений с выводом комментария к ним и возможностью вернуть файл в состояние того или иного уровня изменений.
 
-Git 33
+* *Для вызова журнала изменений используется команда:*
+
+> git log
