--- a/Инструкция.md
+++ b/Инструкция.md
@@ -31,10 +31,36 @@
 
 *Важный нюанс при работе с программой заключается в том, что при любом измении файла в котором идет работа необходимо сообщать об этом программе по средствам команды git add. В случае если этот шаг пропустить изменение в git зафиксировать неудастся.*
 * Для оценки текущего сосотояния работы программы используется команда:
-> git status
+> **git status**
 
 ## Git ведет журнал зафиксированных пользователем изменений с выводом комментария к ним и возможностью вернуть файл в состояние того или иного уровня изменений.
 
 * *Для вызова журнала изменений используется команда:*
 
-> git log
+> **git log**
+
+ **У каждого изменения есть свой хэш-код с помощью которого можно вернуть проект в сосотояние сохраненное на момент фиксации изменения.** 
+
+* *Это производится с помощью первых пяти символов кода и команды:*
+
+> **git checkout** 
+
+**Так же эта команда используется для переключения в системе ветвления git, только вместо пяти символов кода используется имя ветки.**
+
+* *Чтобы вернуть документ в сосотояние последнего изменнения используется команда:*
+> **git switch -**
+
+## Git позволяет работать с документом в структурном режиме с помощью системы ветвления.
+
+* *для создания ветви используется команда:*
+> **git branch** имя ветви
+
+**для просмотра структуры ветвления достатоно команды использующейся для создания ветви без ввода ее имени.** 
+
+ Создавая новую ветвь при работе с документом в нее будет перенесен файл в текущем состоянии. В дальнейшем изменения в файле и  результаты их фиксации будут доступны только по адресу ветви в которой они фиксируются.
+
+* *Для слияния ветвей используется команда:*
+> **git merge**
+
+* *для удаления ветви используется команда:*
+> **git branch -d** имя ветви
