--- a/Инструкция.md
+++ b/Инструкция.md
@@ -64,5 +64,17 @@
 
 * *для удаления ветви используется команда:*
 > **git branch -d** имя ветви
+## Работа с удаленными репозиториями с помощью github
 
-git 68
+* *Для загрузки удаленного репозитория на локальный диск используется команда:*
+
+> **git clone**
+
+**С указанием ссылки на репозиторий**
+
+* Для связки локального репозитория с удаленным используется команда:
+> **git remote add**
+
+**Также с указанием ссылки**
+* *И для отправки локальной версии файла на github используется команда:*
+> **git push -u**
