--- a/Инструкция.md
+++ b/Инструкция.md
@@ -62,8 +62,11 @@
 * *Для слияния ветвей используется команда:*
 > **git merge**
 
-* *для удаления ветви используется команда:*
+* *Для удаления ветви используется команда:*
 > **git branch -d** имя ветви
+
+* *Для вызова журнала с изменениями с учетом ветвления файла используется команда:*
+> **git log --graph**
 ## Работа с удаленными репозиториями с помощью github
 
 * *Для загрузки удаленного репозитория на локальный диск используется команда:*
@@ -78,3 +81,8 @@
 **Также с указанием ссылки**
 * *И для отправки локальной версии файла на github используется команда:*
 > **git push -u**
+
+
+![ItsGit](git.jpg)
+
+https://github.com/
